# GraduationProjectGroup2

./: .env-example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml
backend_api/: Dockerfile  poetry.toml  pyproject.toml
backend_api/app/: Makefile  alembic.ini  app_factory.py  settings.py
backend_api/app/applications/auth/: auth_handler.py  router.py  security.py
backend_api/app/applications/new_buildings/: crud.py  models.py  router.py  schemas.py
backend_api/app/applications/products/: models.py  router.py  schemas.py
backend_api/app/applications/users/: crud.py  models.py  router.py  schemas.py
backend_api/app/favorites_service/app/: crud.py  models.py  schemas.py
backend_api/app/migrations/: env.py
backend_api/app/migrations/versions/: 2025_05_30_1317-128892436c32_add_user_table.py  2025_06_21_1756-6c460bb0ad62_verif_and_admin.py  2025_06_27_1224-47de163c0f41_added_table_products.py  2025_06_27_1435-9a93c3bcebd2_added_table_products.py  2025_06_29_1521-7afed28c0159_create_new_buildings_table.py  2025_06_30_1722-ad31b5806897_create_new_buildings_table.py  2025_07_02_1916-c3daa786b71e_selected.py  2025_07_03_1944-37720f8f8e96_rename_price_to_apartment_price.py
backend_api/app/services/redis/: redis.py
backend_api/app/services/s3/: s3.py
backend_api/favorites_service/: schemas.py
backend_api/favorites_service/app/: crud.py  models.py  schemas.py
documentation/: mkdocs.yml
frontend/: Dockerfile  Makefile  dev-steps.md  pyproject.toml
frontend/app/: app_factory.py  main.py  new_buildings_schema.py  settings.py
frontend/app/backend_api/: api.py
frontend/app/backend_api1/: api.py
frontend/app/backend_api_in_frontend/: api.py
frontend/app/routers/: router.py
frontend/app/services/s3/: s3_frontend.py
frontend/app/static/css/: style.css
frontend/app/templates/: blog.html  catalog.html  index.html  login.html  new_building_detail.html  new_buildings.html  personal_account.html  register.html  rent.html  rent_detail.html  second_owner.html  second_owner_detail.html  sell_buildings.html
(+24 files in other folders)
