[project]
name = "groupproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Timamov",email = "timurmov25@gmail.com"}

    {name = "Daniil Dankovskyi",email = "daniil@example.com"}

]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

    "fastapi[all] (>=0.115.12,<0.116.0)"

    "fastapi[all] (>=0.115.12,<0.116.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "pydantic (>=2.11.4,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
