[project]
name = "backend-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Timamov",email = "timurmov25@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi[all] (>=0.115.14,<0.116.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "aioboto3 (>=15.0.0,<16.0.0)",
    "redis (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
